force-app/main/default/objects/Lease_Renewal__c/Lease_Renewal__c.object-meta.xml
<CustomObject>
    <description>One lease renewal conversation, from Yardi-flagged expiry to signed amendment or lost tenant. Records are never deleted; closing changes Status.</description>
    <label>Lease Renewal</label>
    <pluralLabel>Lease Renewals</pluralLabel>
    <nameField>
        <displayFormat>LR-{0000}</displayFormat>
        <label>Renewal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>