force-app/main/default/objects/Lease_Renewal__c/fields/Current_Rent__c.field-meta.xml
<CustomField>
    <fullName>Current_Rent__c</fullName>
    <description>Display-fidelity current rate from Yardi, e.g. &quot;$26.00 / sq ft NNN&quot;.</description>
    <label>Current Rent</label>
    <length>80</length>
    <type>Text</type>
</CustomField>