force-app/main/default/objects/Lease_Renewal__c/fields/Days_Since_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Contact__c</fullName>
    <formula>TODAY() - Last_Contact_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Days Since Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>