force-app/main/default/objects/Lease_Renewal__c/fields/Days_To_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Expiry__c</fullName>
    <formula>Lease_End__c - TODAY()</formula>
    <label>Days to Expiry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>