force-app/main/default/objects/Lease_Renewal__c/fields/Expiry_Health__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Health__c</fullName>
    <description>Expiry urgency signal for Kanban cards and list views. Red at 30 days, amber at 90.</description>
    <formula>IF(NOT(ISPICKVAL(Status__c, "Active")), "—", IF((Lease_End__c - TODAY()) &lt;= 30, "🔴 Critical", IF((Lease_End__c - TODAY()) &lt;= 90, "🟡 Approaching", "🟢 Comfortable")))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Health</label>
    <type>Text</type>
</CustomField>