force-app/main/default/objects/Lease_Renewal__c/fields/Handling_Person__c.field-meta.xml
<CustomField>
    <fullName>Handling_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handling Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Handled_Lease_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>