force-app/main/default/objects/Lease_Renewal__c/fields/Has_Renewal_Option__c.field-meta.xml
<CustomField>
    <fullName>Has_Renewal_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A pre-set renewal option exists on the lease. When false, a new rate needs approval.</description>
    <label>Renewal Option Exists</label>
    <type>Checkbox</type>
</CustomField>