force-app/main/default/objects/Lease_Renewal__c/fields/Last_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Date__c</fullName>
    <description>Date of the last tenant contact. Stamped by LeaseRenewalController.addUpdate for non-System methods.</description>
    <label>Last Contact</label>
    <type>Date</type>
</CustomField>