force-app/main/default/objects/Lease_Renewal__c/fields/Lease_End__c.field-meta.xml
<CustomField>
    <fullName>Lease_End__c</fullName>
    <label>Lease End</label>
    <required>true</required>
    <type>Date</type>
</CustomField>