force-app/main/default/objects/Lease_Renewal__c/fields/Option_Honored__c.field-meta.xml
<CustomField>
    <fullName>Option_Honored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal Option Honored</label>
    <type>Checkbox</type>
</CustomField>