force-app/main/default/objects/Lease_Renewal__c/fields/Preset_Terms__c.field-meta.xml
<CustomField>
    <fullName>Preset_Terms__c</fullName>
    <label>Pre-Set Renewal Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>