force-app/main/default/objects/Lease_Renewal__c/fields/Property_Asset__c.field-meta.xml
<CustomField>
    <fullName>Property_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property_Asset__c</referenceTo>
    <relationshipLabel>Lease Renewals</relationshipLabel>
    <relationshipName>Lease_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>