force-app/main/default/objects/Lease_Renewal__c/fields/Proposed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Rate__c</fullName>
    <description>Proposed renewal rate in $ per sq ft.</description>
    <label>Proposed Rate ($/Sq Ft)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>