force-app/main/default/objects/Lease_Renewal__c/fields/Renewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Date__c</fullName>
    <description>Stamped by the status-sync flow when Stage first becomes Renewed. Powers the Renewed (YTD) KPI.</description>
    <label>Renewed Date</label>
    <type>Date</type>
</CustomField>