force-app/main/default/objects/Lease_Renewal__c/fields/Space_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Space_Sq_Ft__c</fullName>
    <label>Space (Sq Ft)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>