force-app/main/default/objects/Lease_Renewal__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Started</fullName>
                <default>true</default>
                <label>Not Yet Started</label>
            </value>
            <value>
                <fullName>Notice Sent</fullName>
            </value>
            <value>
                <fullName>Awaiting Tenant Response</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Amendment Drafted</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Not Renewing</fullName>
            </value>
            <value>
                <fullName>Vacating</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>