force-app/main/default/objects/Lease_Renewal__c/fields/Tenant_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Name__c</fullName>
    <label>Tenant</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>