force-app/main/default/objects/Lease_Renewal__c/fields/Unit_Label__c.field-meta.xml
<CustomField>
    <fullName>Unit_Label__c</fullName>
    <description>The tenant's unit/suite as a free-text label mirrored from Yardi (e.g. "Suite 105", "Bay 2", "Anchor B"). This is NOT a relationship to the Unit__c object - it is an uncontrolled string and no Unit__c record is guaranteed to exist for it. Replaces the former Unit__c field, whose name falsely implied a lookup under ARCHITECTURE.md §1 rule 3.</description>
    <inlineHelpText>Free text as it appears in Yardi, e.g. "Suite 105". Not linked to a Unit record - do not expect Unit__r to resolve from this field.</inlineHelpText>
    <label>Unit Label</label>
    <length>60</length>
    <type>Text</type>
</CustomField>