force-app/main/default/objects/Lease_Renewal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tenant_Name__c</columns>
    <columns>Property_Display_Name__c</columns>
    <columns>Unit_Label__c</columns>
    <columns>Lease_End__c</columns>
    <columns>Days_To_Expiry__c</columns>
    <columns>Expiry_Health__c</columns>
    <columns>Stage__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Renewals</label>
</ListView>