force-app/main/default/objects/Lease_Renewal__c/listViews/Expiring_90_Days.listView-meta.xml
<ListView>
    <fullName>Expiring_90_Days</fullName>
    <columns>NAME</columns>
    <columns>Tenant_Name__c</columns>
    <columns>Property_Display_Name__c</columns>
    <columns>Lease_End__c</columns>
    <columns>Days_To_Expiry__c</columns>
    <columns>Expiry_Health__c</columns>
    <columns>Stage__c</columns>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Days_To_Expiry__c</field>
        <operation>lessOrEqual</operation>
        <value>90</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Expiring ≤ 90 Days</label>
</ListView>