force-app/main/default/objects/Lease_Renewal__c/listViews/Non_Responsive.listView-meta.xml
<ListView>
    <fullName>Non_Responsive</fullName>
    <columns>NAME</columns>
    <columns>Tenant_Name__c</columns>
    <columns>Property_Display_Name__c</columns>
    <columns>Days_Since_Contact__c</columns>
    <columns>Last_Contact_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>Lease_End__c</columns>
    <filters>
        <field>Non_Responsive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Non-Responsive</label>
</ListView>