force-app/main/default/objects/Lease_Renewal__c/listViews/Renewal_Pipeline.listView-meta.xml
<ListView>
    <fullName>Renewal_Pipeline</fullName>
    <columns>NAME</columns>
    <columns>Tenant_Name__c</columns>
    <columns>Property_Display_Name__c</columns>
    <columns>Lease_End__c</columns>
    <columns>Days_To_Expiry__c</columns>
    <columns>Expiry_Health__c</columns>
    <columns>Non_Responsive__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>Renewal Pipeline</label>
</ListView>